# Embedded-C

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  EX.c  EX.h
